# ObsTractor

./: LICENSE  README.md  Ubuntu_14.04(16.04) ROS_Indigo(Kinetic).txt
iiwa_7_filter/: CMakeLists.txt  package.xml
kinects_obstacle_extractor/: CMakeLists.txt  package.xml
kinects_obstacle_extractor/config/: extractor.rviz  kinects_obstacle_extractor.yaml
kinects_obstacle_extractor/include/: config.h  depth_processor.h  kinects_obstacle_extractor.h  kinematics.h  matrix.h  matrix.hpp  robotFilter.hpp  robotMath.h
kinects_obstacle_extractor/launch/: kinects_obstacle_extractor.launch
kinects_obstacle_extractor/src/: depth_processor.cpp  kinects_obstacle_extractor.cpp  kinematics.cpp  robotMath.cpp
lwr_description/: CMakeLists.txt  package.xml
lwr_gazebo/: CMakeLists.txt  package.xml
lwr_gazebo/config/: lwr_arm_controller.yaml  lwr_arm_rviz.rviz  lwr_joint_state_controller.yaml
lwr_gazebo/launch/: gazebo_human_control.launch  lwr_arm_rviz.launch  lwr_kinect_sim_room.launch  sphere-kinect.launch
lwr_gazebo/models/Cage/: model.config  model.sdf
lwr_gazebo/models/MovingCube/: model.config  model.sdf
lwr_gazebo/models/MovingHuman/: model.sdf
lwr_gazebo/models/MovingHuman/meshes/: Man_Mp_Iphone.dae  readme.txt
lwr_gazebo/models/Walls/: model.config  model.sdf
lwr_gazebo/models/Xtion1/: model.sdf
lwr_gazebo/models/Xtion2/: model.config  model.sdf
lwr_gazebo/models/robonaut/: model-1_4.sdf  model.sdf
lwr_gazebo/src/: human_controller.cpp
lwr_gazebo/worlds/: lwr_arm.world  lwr_kinect_room.world  sphere-kinect.world
offline mapping/: sphere_test.m  (+9 more)
(+22 files in other folders)
